# CCD-GPU

./: .clang-format  .clang_format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
app/: main.cu
cmake/: CCDGPU_Dependencies.cmake  CCDGPU_DownloadExternal.cmake  CCDGPU_Utils.cmake  FindGMP.cmake  UseColors.cmake  Warnings.cmake
cmake/recipes/: broadphase.cmake
src/: CMakeLists.txt  Type.hpp  helper.cu  helper.cuh  record.hpp  root_finder.cu  root_finder.cuh
tools/: CType.cu  CType.cuh  rational.hpp  timer.cuh
